Use valueOf()
- Remove redundant parentheses
- Use multi-catch
- Use compact array declarations